Bug 159401 - Colorpicker returning wrong values
Summary: Colorpicker returning wrong values
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-misc (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Pino Toscano
URL:
Keywords:
: 163097 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-03-16 11:45 UTC by Milan Krivda
Modified: 2008-06-16 01:10 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Milan Krivda 2008-03-16 11:45:27 UTC
Version:            (using KDE 4.0.2)
Installed from:    Gentoo Packages
OS:                Linux

If i open configure desktop dialog and try to pickup color, color picker is returning bad (i think randomized) color values. If i take color from same place three times, colorpicker return three times different colors. Color picking is working right from other qt4, kde4 applications.
Comment 1 Pino Toscano 2008-06-15 00:11:39 UTC
*** Bug 163097 has been marked as a duplicate of this bug. ***
Comment 2 Pino Toscano 2008-06-15 00:19:32 UTC
SVN commit 820607 by pino:

When we are compibiling for X11, and Xutil.h was found, use the Xlib API to get the color value of a pixel of the screen. In all the other cases, use the "classic" Qt code.
This workarounds a bug in either Qt or X (Qt, probably), but should be fine for now.

BUG: 159401


 M  +14 -0     CMakeLists.txt  
 A             config-kolourpicker.h.cmake  
 M  +34 -4     kolourpicker.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=820607
Comment 3 Aaron J. Seigo 2008-06-15 21:44:18 UTC
interesting ... this only fixes the kolourpicker plasmoid, of course; i think something similar will need to be done to KColorDialog::grabColor for the desktop settings dialog which still doesn't work. i'm testing now. thanks for the patch, Pino; sad we have to go under Qt for this =/
Comment 4 Aaron J. Seigo 2008-06-16 01:10:03 UTC
this is now fixed in kdelibs as well. thanks pino and marco =)