When we are compibiling for X11, and Xutil.h was found, use the Xlib API to get the color value of a pixel of the screen. In all the other cases, use the "classic" Qt code. This workarounds a bug in either Qt or X (Qt, probably), but should be fine for now.

BUG: 159401

svn path=/trunk/KDE/kdeplasmoids/; revision=820607